fixed whitespace on bottom

--- a/style.css
+++ b/style.css
@@ -32,10 +32,12 @@ a{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 20px 60px;
+    padding: 1.5rem 3rem;
     background-color: rgb(29, 35, 104);
+    z-index: 1;
 }
 .label{
+    padding: 0rem 4rem ;
     font-size: xx-large;
     color: goldenrod;
 }
@@ -52,6 +54,7 @@ a{
 }
 
 nav a {
+    z-index: 1;
     text-decoration: none;
     color: white;
     margin-right: 10px;
@@ -105,7 +108,7 @@ a:hover {
     background: #4e54c8;
     background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8);
     width: 100%;
-    height:100vh;
+    min-height:100vh;
 }
 .title-card{
     position: relative;
@@ -292,7 +295,7 @@ a:hover {
 /*footer*/
 .footer{
     position: absolute;
-    bottom: 0%;
+    bottom: 0;
     left: 0;
     width: 100%;
     display: flex;
